# arcvellum

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
client/: index.html  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: App.vue  env.d.ts  main.ts  router.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/architecture/: current-core-review.md  engine-snapshot.md  new-studio-architecture.md  studio-function-completeness-review-v0.2.1.md
docs/releases/: RELEASING.md  post-v0.9.4-spatial-reliability-verification.md  v0.3.0.md  v0.5.0-verification.md  v0.5.0.md  v0.7.0-verification.md  v0.7.0.md  v0.7.1-verification.md  v0.7.1.md  v0.8.0.md  v0.9.0-desktop-acceptance.md  v0.9.0-verification.md  v0.9.0.md  v0.9.1-desktop-acceptance.md  v0.9.1.md  v0.9.2.md  v0.9.3.md  v0.9.4.md
docs/roadmap/: arcvellum-post-v0.9.4-spatial-reliability-execution-directive.md  arcvellum-v0.4-v0.5-product-experience-and-autonomy-plan.md  arcvellum-v0.5.1-v0.7-reader-advisor-observatory-plan.md  arcvellum-v0.7.1-v0.8-creative-control-and-narrative-orrery-plan.md  arcvellum-v0.8-agent-runtime-and-immersive-orrery-execution-plan.md  arcvellum-v0.9-implementation-execution-plan.md  arcvellum-v0.9-spatial-orrery-and-creative-observability-plan.md  embedded-opencode-desktop-productization-plan.md  implementation-route.md
frontend/: app.js  index.html  styles.css
packaging/: build_desktop.ps1  build_update_manifest.py  sidecar_provenance.py  studio_sidecar.py  studio_sidecar.spec
scripts/: sync-desktop-frontend.mjs  verify-v09-build.mjs
src/literary_engineering_studio/: __init__.py  advisor.py  advisor_inbox.py  advisor_personas.py  advisor_snapshot.py  agent_observability.py  agent_session_tracking.py  api_server.py  application_info.py  autopilot.py  bootstrap.py  cli.py  config.py  contracts.py  core_bridge.py  core_read_models.py  creative_steward.py  delivery.py  execution_coordinator.py  jobs.py  lifecycle.py  live_events.py  model_connections.py  narrative_projection.py  (+22 more)
tests/: test_advisor.py  test_advisor_inbox.py  test_advisor_personas.py  test_agent_observability.py  test_agent_runners.py  test_agent_session_tracking.py  test_api_server.py  test_application_info.py  test_asset_review_revision_loop.py  test_atomic_read_models.py  test_autopilot.py  test_bootstrap.py  test_canon_patch_route.py  test_choice_effect_materialization.py  test_cli_serve.py  test_config.py  test_context_packet_compaction.py  test_contracts.py  test_core_bridge.py  test_core_read_models.py  test_creative_quality.py  test_execution_coordinator.py  test_jobs.py  test_longform_materializer.py  test_longform_revision_loop.py  test_narrative_projection.py  test_narrative_projection_v3.py  test_narrative_rhythm_curve.py  test_opencode.py  test_opencode_runtime_execution.py  test_opencode_runtime_pool.py  test_project_manager.py  test_project_progress.py  test_prompt_evaluation.py  test_read_model_cache.py  test_reader.py  test_reader_experience_contract.py  test_release_fingerprint.py  test_release_metadata.py  test_review_audit_revision_loop.py  (+15 more)
(+174 files in other folders)
