[project]
name = "literary-engineering-studio"
version = "0.7.1"
description = "Standalone long-form literary project studio with an embedded workflow engine and controlled Agent runtimes."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2",
]
test = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.scripts]
les = "literary_engineering_studio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
literary_engineering_studio = [
    "frontend/dist/**/*.html",
    "frontend/dist/**/*.css",
    "frontend/dist/**/*.js",
    "frontend/dist/**/*.map",
    "frontend/assets/**/*.png",
    "frontend/assets/**/*.jpg",
    "frontend/assets/**/*.jpeg",
    "frontend/assets/**/*.svg",
    "frontend/assets/**/*.txt",
    "frontend/assets/**/*.webp",
    "vendor/*.json",
    "vendor/*.md",
    "vendor/*.txt",
]
literary_engineering_studio_engine = [
    "_engine/*.md",
    "_engine/*.yaml",
    "_engine/docs/**/*.md",
    "_engine/references/*.md",
    "_engine/schemas/**/*.json",
    "_engine/templates/**/*.md",
    "_engine/templates/**/*.yaml",
]
