[package]
name = "literary-engineering-studio-desktop"
version = "0.3.0"
description = "Native desktop shell for Literary Engineering Agent Studio"
authors = ["Literary Engineering Studio contributors"]
edition = "2021"
license = "MIT"

[[bin]]
name = "literary-engineering-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
uuid = { version = "1", features = ["v4"] }
