[package]
name = "arcvellum-desktop"
version = "0.9.2"
description = "Native desktop shell for ArcVellum"
authors = ["ArcVellum contributors"]
edition = "2021"
license = "MIT"

[[bin]]
name = "literary-engineering-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
uuid = { version = "1", features = ["v4"] }
